--- a/contacte.html
+++ b/contacte.html
@@ -13,7 +13,7 @@
 
 
     <nav>
-        <a href="inici.html">SOBRE MI</a>
+        <a href="index.html">SOBRE MI</a>
         <a href="habilitats.html">HABILITATS</a>
         <a href="projectes.html">PROJECTES</a>
     </nav>
