--- a/projectes.html
+++ b/projectes.html
@@ -12,7 +12,7 @@
     </header>
 
     <nav>
-        <a href="inici.html">SOBRE MI</a>
+        <a href="index.html">SOBRE MI</a>
         <a href="habilitats.html">PROJECTES</a>
         <a href="contacte.html">CONTACTE</a>
     </nav>
