--- a/inici.html
+++ b/inici.html
@@ -21,6 +21,7 @@
   <div class="cv-download">
     <a href="Currículum Vitae MARC (3).pdf" download>Currículum Vitae</a>
     <a href="Video Ascensor (2).mp4" download>Elevator Pitch</a>
+    <a href="DAFO.pdf" download>DAFO</a>
 </div>
 
 
@@ -67,6 +68,15 @@
         </li>
     </ul>
 </div>
+
+<div id="reflexió" class="section">
+        <h2>Reflexió</h2>
+    <p>Després d’analitzar el meu perfil amb el DAFO, m’he adonat que, tot i que encara no tinc experiència laboral i sé que tinc coses a millorar, com la gestió del temps, també tinc fortaleses importants: sóc constant, m’agrada aprendre i estic motivat per continuar creixent.</p>
+
+    <p>A més, sé que estic en un moment ple d’oportunitats. El món de la programació no para de créixer, i puc fer pràctiques, projectes o conèixer gent del sector que m’ajudi a millorar cada dia.</p>A més, sé que estic en un moment ple d’oportunitats. El món de la programació no para de créixer, i puc fer pràctiques, projectes o conèixer gent del sector que m’ajudi a millorar cada dia.
+
+<p>Aquest primer any del cicle de DAM m’ha servit molt per consolidar la base de programació, entendre com treballar en equip i també per conèixer com es mou el món tecnològic real. He tingut moments difícils, però també n’he après molt, i em sento més preparat per afrontar el segon any amb més seguretat i ganes.</p>
+    </div>
 
 
     <footer>
